# qwen3-tts-api

./: .gitignore  README.md  REFERENCE_AUDIO_API.md  TTS_DESIGN_README.md  api.py  pyproject.toml  start.sh  test_api.py
data/: tts_references.db
docs/: MCP.md  MEMORY_OPTIMIZATION.md  REFERENCE_AUDIO_API.md
flutter_frontend/: README.md  analysis_options.yaml  pubspec.yaml
flutter_frontend/design-system/qwen3-tts/: MASTER.md
flutter_frontend/lib/: main.dart
flutter_frontend/lib/models/: audio_models.dart
flutter_frontend/lib/providers/: api_provider.dart  audio_providers.dart  providers.dart  reference_providers.dart
flutter_frontend/lib/screens/: audio_generation_screen.dart  home_screen.dart  reference_management_screen.dart
flutter_frontend/lib/services/: api_service.dart
flutter_frontend/lib/theme/: app_theme.dart
flutter_frontend/lib/widgets/: audio_player_widget.dart  common_widgets.dart
flutter_frontend/test/: widget_test.dart
flutter_frontend/web/: index.html  manifest.json
pix-audio-qwen3-tts/: README.md  SKILL.md
pix-audio-qwen3-tts/scripts/: __init__.py  workflow.py
qwen3_tts_mcp/: __init__.py  pyproject.toml  server.py
qwen3_tts_mcp/tools/: __init__.py
res/: liuyandong.txt  prompt.txt  prompt1.txt
scripts/: clean_audio.py  init_sample_data.py  migrate_references.py  monitor_memory.py
src/: __init__.py
src/qwen3_tts_api/: __init__.py  __main__.py  config.py  main.py
src/qwen3_tts_api/api/: deps.py
src/qwen3_tts_api/api/routes/: audio_merge.py  reference.py  text_split.py
src/qwen3_tts_api/db/: connection.py  reference_store.py
src/qwen3_tts_api/models/: reference.py  text_split.py
src/qwen3_tts_api/resources/: paths.py
src/qwen3_tts_api/services/: text_splitter.py  tts.py  utils.py
test/: merge.sh  task.sh
tests/: conftest.py  test_audio_merge.py  test_audio_upload.py  test_health.py  test_languages.py  test_reference.py  test_reference_audio.py  test_reference_default.py  test_reference_delete.py  test_reference_detail.py  test_reference_list.py  test_reference_update.py  test_reference_upload.py  test_text_split_api.py  test_text_splitter.py  test_tts_clone.py  test_tts_generate.py
