[project]
name = "qwen3-tts-api"
version = "1.0.0"
description = "Qwen3 Text-to-Speech API with voice cloning and voice design support"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "torch>=2.0.0",
    "qwen-tts>=0.1.0",
    "soundfile>=0.12.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "librosa>=0.10.0",
    "resampy>=0.4.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[dependency-groups]
dev = []
