[project]
name = "qwen3-tts-api"
version = "1.0.0"
description = "Qwen3 Text-to-Speech API with voice cloning and voice design support"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "torch>=2.0.0",
    "qwen-tts>=0.1.0",
    "soundfile>=0.12.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "librosa>=0.10.0",
    "resampy>=0.4.0",
    "scipy>=1.11.0",
    "psutil>=5.9.0",
    "pydub>=0.25.1",
    "speechbrain>=0.5.16",
    "mcp[fastapi]>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
]

[project.scripts]
qwen3-tts-mcp = "qwen3_tts_mcp.server:mcp"

[dependency-groups]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src_*", "qwen3_tts_mcp*"]

[tool.setuptools.package-dir]
qwen3_tts_api = "src/qwen3_tts_api"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
