[project]
name = "qwen3-tts-mcp"
version = "0.1.0"
description = "MCP Server for Qwen3-TTS API"
requires-python = ">=3.10"
dependencies = [
    "mcp[fastapi]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
